added new files

--- a/notebooks/grapfs/InitialTestGraph.ipynb
+++ b/notebooks/grapfs/InitialTestGraph.ipynb
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -810,6 +810,51 @@
     "G=nx.from_pandas_dataframe(df, 0, 'b', ['weight', 'cost'])\n",
     "nx.draw(G)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "\n",
+    "def hierarchy_pos(G, root, width=1., vert_gap = 0.2, vert_loc = 0, xcenter = 0.5 ):\n",
+    "    '''If there is a cycle that is reachable from root, then result will not be a hierarchy.\n",
+    "\n",
+    "       G: the graph\n",
+    "       root: the root node of current branch\n",
+    "       width: horizontal space allocated for this branch - avoids overlap with other branches\n",
+    "       vert_gap: gap between levels of hierarchy\n",
+    "       vert_loc: vertical location of root\n",
+    "       xcenter: horizontal location of root\n",
+    "    '''\n",
+    "\n",
+    "    def h_recur(G, root, width=1., vert_gap = 0.2, vert_loc = 0, xcenter = 0.5, \n",
+    "                  pos = None, parent = None, parsed = [] ):\n",
+    "        if(root not in parsed):\n",
+    "            parsed.append(root)\n",
+    "            if pos == None:\n",
+    "                pos = {root:(xcenter,vert_loc)}\n",
+    "            else:\n",
+    "                pos[root] = (xcenter, vert_loc)\n",
+    "            neighbors = G.neighbors(root)\n",
+    "            if parent != None:\n",
+    "                neighbors.remove(parent)\n",
+    "            if len(neighbors)!=0:\n",
+    "                dx = width/len(neighbors) \n",
+    "                nextx = xcenter - width/2 - dx/2\n",
+    "                for neighbor in neighbors:\n",
+    "                    nextx += dx\n",
+    "                    pos = h_recur(G,neighbor, width = dx, vert_gap = vert_gap, \n",
+    "                                        vert_loc = vert_loc-vert_gap, xcenter=nextx, pos=pos, \n",
+    "                                        parent = root, parsed = parsed)\n",
+    "        return pos\n",
+    "\n",
+    "    return h_recur(G, root, width=1., vert_gap = 0.2, vert_loc = 0, xcenter = 0.5)"
    ]
   },
   {
