branche-codes have been included

--- a/notebooks/vaekst/VækstSprint.ipynb
+++ b/notebooks/vaekst/VækstSprint.ipynb
@@ -17,17 +17,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/svanhmic/workspace/Python/Erhvervs/data/cdata/parquet/virkdata.parquet\n"
+     ]
+    }
+   ],
    "source": [
     "#regular python includes goes in here!\n",
     "\n",
     "import os\n",
     "import re\n",
-    "regnskabsData = \"/home/svanhmic/workspace/Python/Erhvervs/data/regnskabsdata/sparkdata/parquet/alleregnskaber.parquet\"\n",
+    "import getpass\n",
+    "\n",
+    "user = getpass.getuser()\n",
+    "\n",
+    "regnskabsData = \"/home/\"+user+\"/workspace/Python/Erhvervs/data/regnskabsdata/sparkdata/parquet/alleregnskaber.parquet\"\n",
+    "cvrData =   \"/home/\"+user+\"/workspace/Python/Erhvervs/data/cdata/parquet/virkdata.parquet\"\n",
+    "\n",
+    "print(cvrData)\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sb\n",
@@ -49,16 +64,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+-----------+----------+----------+-----------------------------------------------------------------+\n",
+      "|cvrNummer|branchekode|gyldigFra |gyldigTil |branchetekst                                                     |\n",
+      "+---------+-----------+----------+----------+-----------------------------------------------------------------+\n",
+      "|10000211 |642020     |2009-01-01|null      |Ikke-finansielle holdingselskaber                                |\n",
+      "|10000718 |494200     |2011-01-01|2013-11-05|Flytteforretninger                                               |\n",
+      "|10000718 |494200     |2013-11-06|null      |Flytteforretninger                                               |\n",
+      "|10000866 |642020     |2009-01-01|null      |Ikke-finansielle holdingselskaber                                |\n",
+      "|10001021 |642020     |2009-01-01|2012-06-30|Ikke-finansielle holdingselskaber                                |\n",
+      "|10001021 |702200     |2012-07-01|null      |Virksomhedsrådgivning og anden rådgivning om driftsledelse       |\n",
+      "|10001110 |642020     |2009-01-01|null      |Ikke-finansielle holdingselskaber                                |\n",
+      "|10001226 |642020     |2010-07-02|null      |Ikke-finansielle holdingselskaber                                |\n",
+      "|10001242 |477900     |2010-12-31|null      |Detailhandel med brugte varer i forretninger                     |\n",
+      "|10001323 |642010     |2010-08-06|null      |Finansielle holdingselskaber                                     |\n",
+      "|10001358 |642020     |2010-08-09|null      |Ikke-finansielle holdingselskaber                                |\n",
+      "|10001382 |467700     |2015-01-01|null      |Engroshandel med affaldsprodukter                                |\n",
+      "|10001560 |711210     |2009-01-01|null      |Rådgivende ingeniørvirksomhed inden for byggeri og anlægsarbejder|\n",
+      "|10001676 |477840     |2010-10-19|2011-11-20|Kunsthandel og gallerivirksomhed                                 |\n",
+      "|10002060 |642020     |2009-01-01|2010-02-16|Ikke-finansielle holdingselskaber                                |\n",
+      "|10002230 |682040     |2015-01-01|null      |Udlejning af erhvervsejendomme                                   |\n",
+      "|10002273 |682040     |2015-04-15|2015-10-23|Udlejning af erhvervsejendomme                                   |\n",
+      "|10002559 |310200     |2009-11-18|2011-04-28|Fremstilling af køkkenmøbler                                     |\n",
+      "|10002559 |282500     |2011-04-29|2015-02-19|Fremstilling af køle- og ventilationsanlæg (til industriel brug) |\n",
+      "|10002729 |591110     |2014-01-01|null      |Produktion af film og videofilm                                  |\n",
+      "+---------+-----------+----------+----------+-----------------------------------------------------------------+\n",
+      "only showing top 20 rows\n",
+      "\n",
+      "root\n",
+      " |-- cvrNummer: long (nullable = true)\n",
+      " |-- branchekode: string (nullable = true)\n",
+      " |-- gyldigFra: string (nullable = true)\n",
+      " |-- gyldigTil: string (nullable = true)\n",
+      " |-- branchetekst: string (nullable = true)\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "#regnskabsDf.show()\n",
-    "#signs\n",
-    "#aRegnskabsDf.show()\n",
-    "#sc.broadcast()"
+    "brancheWindow = Window.partitionBy(\"cvrNummer\",F.year(\"gyldigFra\"))\n",
+    "\n",
+    "virkDf = (sqlContext\n",
+    "          .read\n",
+    "          .parquet(cvrData)\n",
+    "          .select(\"cvrNummer\",F.explode(\"hovedbranche\").alias(\"branche\"))\n",
+    "          .select(\"cvrNummer\",\"branche.branchekode\",\"branche.periode.gyldigFra\",\"branche.periode.gyldigTil\",\"branche.branchetekst\")\n",
+    "          .filter(F.year(F.col(\"gyldigFra\")) > 2008 )\n",
+    "          .withColumn(\"maxDate\",F.unix_timestamp(F.col(\"gyldigFra\"),\"yyyy-MM-dd\"))\n",
+    "          .withColumn(\"realBranche\",F.max(F.col(\"maxDate\")).over(brancheWindow))\n",
+    "          .filter(F.col(\"maxDate\") == F.col(\"realBranche\"))\n",
+    "          .orderBy(\"cvrNummer\",\"gyldigFra\")\n",
+    "          .drop(\"realBranche\")\n",
+    "          .drop(\"maxDate\")\n",
+    "         )\n",
+    "\n",
+    "virkDf.show(20,False)\n",
+    "virkDf.printSchema()\n",
+    "#print(virkDf.select(\"branche\").dtypes)\n",
+    "#virkDf.()\n"
    ]
   },
   {
