--- a/notebooks/vaekst/VækstSprint.ipynb
+++ b/notebooks/vaekst/VækstSprint.ipynb
@@ -509,12 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "x = \"hej med dig\""
+   ]
   },
   {
    "cell_type": "markdown",
